# reviewbuddy

./: Cargo.toml  DESIGN_LANGUAGE.md  LICENSE  PLAN.md  README.md  UI_IMPLEMENTATION_GUIDE.md  build.rs  lsp-support-plan.md  package-lock.json  package.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml
scripts/: code-tour-bridge.mjs
skills/frontend-ui-engineering/: SKILL.md
skills/native-computer-use/: SKILL.md
src/: app_assets.rs  app_http.rs  app_storage.rs  cache.rs  code_display.rs  code_tour.rs  code_tour_background.rs  command_runner.rs  diff.rs  gh.rs  github.rs  local_documents.rs  local_repo.rs  lsp.rs  main.rs  managed_lsp.rs  markdown.rs  notifications.rs  platform_macos.rs  review_context.rs  review_graph.rs  review_intelligence.rs  review_queue.rs  review_routes.rs  review_session.rs  selectable_text.rs  semantic_diff.rs  shader_surface.rs  source_browser.rs  state.rs  syntax.rs  theme.rs
src/agents/: binary.rs  codex.rs  copilot.rs  errors.rs  jsonrepair.rs  merge.rs  mod.rs  progress.rs  prompt.rs  runtime.rs  schema.rs
src/stacks/: atoms.rs  cache.rs  dependencies.rs  discovery.rs  mod.rs  model.rs  validation.rs
src/stacks/providers/: ai_virtual.rs  branch_topology.rs  github_native.rs  mod.rs  virtual_commits.rs  virtual_semantic.rs
src/views/: ai_tour.rs  diff_view.rs  mod.rs  palette.rs  pr_detail.rs  root.rs  sections.rs  settings.rs  tour_view.rs  welcome_shader.rs  workspace_sync.rs
