[package]
name = "gh-ui"
version = "0.1.0"
description = "Fast native desktop review tooling for GitHub built around gh"
authors = ["Riku Wikman"]
edition = "2021"

[dependencies]
codex-codes = { version = "0.101", default-features = false, features = ["async-client"] }
dirs = "6"
flate2 = "1"
gpui = "0.2"
json5 = { version = "0.4", optional = true }
once_cell = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
pulldown-cmark = "0.13"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
ureq = { version = "2.12", features = ["json"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[features]
default = ["tolerant-json"]
tolerant-json = ["dep:json5"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3.2", features = ["NSData"] }
