[package]
name = "remiss"
version = "0.1.0"
description = "Human-centered desktop code review where computers and humans review together"
authors = ["Riku Wikman"]
edition = "2021"

[dependencies]
codex-codes = { version = "0.101", default-features = false, features = ["async-client"] }
dirs = "6"
flate2 = "1"
gpui = "0.2"
json5 = { version = "0.4", optional = true }
once_cell = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
pulldown-cmark = "0.13"
giallo = { version = "0.3.1", features = ["dump"] }
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
ureq = { version = "2.12", features = ["json"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[features]
default = ["tolerant-json"]
tolerant-json = ["dep:json5"]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-video = "0.4"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["CFCGTypes"] }
objc2-core-image = { version = "0.3.2", default-features = false, features = ["std", "CIContext", "CIImage", "CIKernel", "CIVector", "objc2-core-foundation", "objc2-core-video"] }
objc2-core-video = { version = "0.3.2", default-features = false, features = ["CVPixelBuffer"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSData", "NSDictionary", "NSObject", "NSString", "NSValue"] }
